--- a/.github/workflows/buildanddeploy.yaml
+++ b/.github/workflows/buildanddeploy.yaml
@@ -20,8 +20,8 @@
             - name: Configure AWS Credentials
               uses: aws-actions/configure-aws-credentials@v1
               with:
-                aws-access-key-id: secrets.ACCESS_KEY_ID
-                aws-secret-access-key: secrets.SECRET_ACCESS_KEY
+                aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }} 
+                aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
                 aws-region: us-west-2
             
             - name: Install Dependencies
