Workflow navigates to frontend folder properly

--- a/.github/workflows/buildanddeploy.yaml
+++ b/.github/workflows/buildanddeploy.yaml
@@ -28,6 +28,7 @@
             
             - name: Install Dependencies
               run: |
+                cd ./frontend
                 node --version
                 npm ci --production
             
