--- a/.github/workflows/buildanddeploy.yaml
+++ b/.github/workflows/buildanddeploy.yaml
@@ -28,13 +28,14 @@
             
             - name: Install Dependencies
               run: |
+                cd ./frontend
                 node --version
-                npm ci --production
-              working-directory: ./frontend/
+                npm ci
             
             - name: Build Static Website
-              run: npm run build
-              working-directory: ./frontend/
+              run: |
+                cd ./frontend
+                npm run build
 
             - name: Copy files to the producirton website with the AWS CLI
               run: aws s3 sync ${{ env.DIST }} s3://${{ env.BUCKET }}
