--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.3.11",
+    "vue-router": "^4.2.5",
     "vuetify": "^3.5.3"
   },
   "devDependencies": {
