Added deployment environment

--- a/.github/workflows/buildanddeploy.yaml
+++ b/.github/workflows/buildanddeploy.yaml
@@ -15,6 +15,7 @@
                 DIST: ./frontend/dist
                 DIST_ID: E3JJUGWID1KV7V
                 ROLE_TO_ASSUME: arn:aws:iam::339712804477:role/ghactionsrole
+            environment: aws-s3-deploy
 
             steps:
             - name: Checkout
