--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@vueuse/core": "^10.7.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "element-plus": "^2.5.5",
-    "lucide-vue-next": "^0.325.0",
-    "radix-vue": "^1.4.3",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.3.11",
-    "vue-router": "^4.2.5",
-    "vuetify": "^3.5.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.17",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.0.8",
-    "vue-tsc": "^1.8.25"
-  }
+    "name": "frontend",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@vueuse/core": "^10.7.2",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "element-plus": "^2.5.5",
+        "lucide-vue-next": "^0.325.0",
+        "radix-vue": "^1.4.3",
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7",
+        "vue": "^3.3.11",
+        "vue-router": "^4.3.0",
+        "vuetify": "^3.5.3"
+    },
+    "devDependencies": {
+        "@types/node": "^20.11.17",
+        "@vitejs/plugin-vue": "^4.5.2",
+        "autoprefixer": "^10.4.17",
+        "postcss": "^8.4.35",
+        "prettier": "3.2.5",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.2.2",
+        "unplugin-auto-import": "^0.17.5",
+        "unplugin-vue-components": "^0.26.0",
+        "vite": "^5.0.8",
+        "vue-tsc": "^1.8.25"
+    }
 }
